--- a/btx/processing/xpp/docs/profiling/beamer/xpp.tex
+++ b/btx/processing/xpp/docs/profiling/beamer/xpp.tex
@@ -52,7 +52,7 @@
         \end{itemize}
     \item \textcolor{blue}{MakeHistogram: 11.27s (41.9\%)}
         \begin{itemize}
-        \item Histogram calculation: 11.27s
+          \item Histogram calculation: 11.27s with JIT compiler (down from $>60s$ unoptimized)
         \end{itemize}
     \item \textcolor{green}{Signal Analysis: 2.72s (10.1\%)}
         \begin{itemize}
@@ -84,14 +84,13 @@
 
 \begin{frame}{Data loading differences}
 \begin{itemize}
-\item Two distinct analysis workflows for different datasets
+  \item Two distinct event selection and delay calculation workflows for different datasets
 \item Key differences in:
     \begin{itemize}
     \item HDF5 path structures
     \item Event classification methods
     \item Detector mask handling
     \item Filter parameters
-    \item Data processing approaches
     \end{itemize}
 \end{itemize}
 \end{frame}
@@ -106,7 +105,7 @@
 \textbf{Dataset B: xppl1030522}
 \begin{itemize}
 \item Uses \texttt{enc/lasDelay2} directly
-\item Different delay calculation methodology
+\item Different delay calculation formula
 \end{itemize}
 
 \textbf{Impact:} Different delay calculations affect time binning and resolution
@@ -169,12 +168,12 @@ roi0_mask = ROI_0__ROI_0_mask[0]
 \begin{frame}{Filter Parameters}
 \textbf{IPM Position Filters:}
 \begin{itemize}
-\item \textbf{Dataset A:}
+  \item \textbf{Dataset A (dynamically calculated):}
     \begin{itemize}
-    \item X: [-0.2, 0.2]
-    \item Y: [-0.5, 0.5]
+    \item X: [-0.25, 0.45]
+    \item Y: [-0.6, 0.8]
     \end{itemize}
-\item \textbf{Dataset B:}
+\item \textbf{Dataset B:(hardcoded in script parameters)}
     \begin{itemize}
     \item X: [-0.45, 0.45]
     \item Y: [-1.6, 0.0]
@@ -182,23 +181,101 @@ roi0_mask = ROI_0__ROI_0_mask[0]
 \end{itemize}
 \end{frame}
 
+%\begin{frame}{TimeTool Integration}
+%\begin{columns}
+%\column{0.5\textwidth}
+%\textbf{Dataset A}
+%\begin{itemize}
+%\item Optional usage
+%\item Configurable threshold
+%\item Laser-on events only
+%\end{itemize}
+%
+%\column{0.5\textwidth}
+%\textbf{Dataset B}
+%\begin{itemize}
+%\item Always enabled
+%\item Fixed threshold
+%\item All events
+%\end{itemize}
+%\end{columns}
+%\end{frame}
+
+%\begin{frame}{TimeTool Integration}
+%\begin{columns}
+%\column{0.5\textwidth}
+%\textbf{Dataset A}
+%\begin{itemize}
+%\item Always enabled
+%\item Fixed threshold
+%\item All events
+%\end{itemize}
+%
+%\begin{lstlisting}[language=Python]
+%filters = {
+%    'tt_amp': [0.015, np.inf]
+%}
+%
+%# Applied to all events except 
+%# laser-off for tt specifically
+%if 'tt' not in key:  
+%    laser_off_mask = np.logical_and(
+%        laser_off_mask, 
+%        value_filter)
+%\end{lstlisting}
+%
+%\column{0.5\textwidth}
+%\textbf{Dataset B}
+%\begin{itemize}
+%\item Optional usage
+%\item Configurable threshold
+%\item Laser-on events only
+%\end{itemize}
+%
+%\begin{lstlisting}[language=Python]
+%# Optional timetool filter
+%if use_timetool:
+%    filters['tt_amp'] = [0.0, np.inf]
+%
+%# Only applies to laser-on events
+%if key == 'tt_amp':
+%    laser_on_mask = np.logical_and(
+%        laser_on_mask, 
+%        value_filter)
+%\end{lstlisting}
+%\end{columns}
+%\end{frame}
+
 \begin{frame}{TimeTool Integration}
 \begin{columns}
 \column{0.5\textwidth}
 \textbf{Dataset A}
 \begin{itemize}
-\item Optional usage
-\item Configurable threshold
-\item Laser-on events only
+\item Always enabled
+\item Fixed threshold
 \end{itemize}
+
+\texttt{\# Fixed threshold in filters}\\
+\texttt{filters['tt\_amp'] = [0.015, inf]}\\
+\vspace{0.5cm}
+\texttt{\# Skip tt filter for laser-off}\\
+\texttt{if 'tt' not in key:}\\
+\texttt{~~~~laser\_off\_mask = mask and filt}
 
 \column{0.5\textwidth}
 \textbf{Dataset B}
 \begin{itemize}
-\item Always enabled
-\item Fixed threshold
-\item All events
+\item Optional usage
+\item Configurable threshold
 \end{itemize}
+
+\texttt{\# Optional timetool usage}\\
+\texttt{if use\_timetool:}\\
+\texttt{~~~~filters['tt\_amp'] = [0.0, inf]}\\
+\vspace{0.5cm}
+\texttt{\# Laser-on events only}\\
+\texttt{if key == 'tt\_amp':}\\
+\texttt{~~~~laser\_on\_mask = mask and filt}
 \end{columns}
 \end{frame}
 
